Complete 19x16 div and next mapping it

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body>
     <header>Sokoban</header>
     <hr>
-    <div id = "myID" class="gameArea">
-
-    </div>
+    <div id = "myGame" class="gameArea">    </div>
     <hr>
     <script src="/scripts/SokobanBase.js"></script>
     <script src="/scripts/Main.js"></script>   
