Raw map is drawn

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Assignment: Sokoban - Lexicon</title>
     <link rel="stylesheet" href="/style/style.css" />
   </head>
-  <body>
+  <body id="sokoBanBody">
     <header>Sokoban</header>
     <hr>
     <div id = "myGame" class="gameArea">    </div>
     <hr>
+    <h2 id="msgArea"></h2>
     <script src="/scripts/SokobanBase.js"></script>
     <script src="/scripts/Main.js"></script>   
   </body>
