--- a/test.html
+++ b/test.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>For testing</title>
+    <link rel="stylesheet" href="/style/style.css"/>
+</head>
 <body>
-
 <h1>The Document Object</h1>
+<hr>
+<div class="myDIV" id="textArea">
+    <h3>A DIV element</h3>
+    <div id="testImg"></div>
+</div>
+<hr>
 <h2>The createElement() Method</h2>
 
 <p>Create a p element and append it to "myDiv":</p>
 
-<div id="myDIV" style="padding:16px;background-color:lightgray">
-<h3>A DIV element</h3>
-</div>
 
-<script src="/scripts/Main.js"></script>
+<script>
+    // Test Image at test.html
 
+    /*    
+    document.getElementById("testImg").appendChild(document.createElement("img"));
+        wall.setAttribute("src", "/Image/wall.png");
+        wall.setAttribute("alt","W");
+        wall.setAttribute("display", "block");
+        wall.setAttribute("width", "100%");
+        wall.setAttribute("height", "100%");
+//        wall.setAttribute("top", "0");
+        wall.setAttribute("position", "absolute");
+*/
+</script>   
 </body>
 </html>
