--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id = "myGame" class="gameArea">    </div>
     <hr>
     <h2 id="msgArea"></h2>
-    <button onclick="startGame()">Reset Board->Start</button>
+    <button onclick="score()">Score</button>
     <script src="/scripts/SokobanBase.js"></script>
     <script src="/scripts/Main.js"></script>   
   </body>
